--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@hookform/resolvers": "^2.9.11",
     "@tanstack/react-query": "^4.24.9",
     "@tanstack/react-query-devtools": "^4.24.9",
+    "@types/lodash": "^4.14.191",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
