--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@floating-ui/react": "^0.19.2",
     "@hookform/resolvers": "^2.9.11",
     "@tanstack/react-query": "^4.24.9",
     "@tanstack/react-query-devtools": "^4.24.9",
     "@types/lodash": "^4.14.191",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
+    "framer-motion": "^9.0.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
