--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.19.2",
     "@hookform/resolvers": "^2.9.11",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.24.9",
     "@tanstack/react-query-devtools": "^4.24.9",
     "@types/lodash": "^4.14.191",
