--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
+    "swiper": "^9.0.5",
     "yup": "^1.0.0"
   },
   "devDependencies": {
