--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rollup-plugin-visualizer": "^5.9.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vitest": "^0.30.1"
   }
 }
