--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.24.9",
     "@tanstack/react-query-devtools": "^4.24.9",
+    "@types/html-to-text": "^9.0.0",
     "@types/lodash": "^4.14.191",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "dompurify": "^3.0.0",
     "framer-motion": "^9.0.6",
+    "html-to-text": "^9.0.5",
     "immer": "^9.0.19",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
